[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/actors/objects/seesaw/texture.png" type="Texture" id=1]
[ext_resource path="res://scenes/actors/objects/seesaw/seesaw.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/objects/metal_platform/is_platform_area.gd" type="Script" id=3]
[ext_resource path="res://scenes/actors/objects/metal_platform/semi_solid_platform.gd" type="Script" id=4]
[ext_resource path="res://scenes/actors/objects/seesaw/screw.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70, 28 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 42, 15 )

[node name="Seesaw" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 16
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
monitoring = false
collision_layer = 16
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
shape = SubResource( 2 )

[node name="Sprite" type="NinePatchRect" parent="."]
margin_left = -48.0
margin_top = -9.0
margin_right = 48.0
margin_bottom = 9.0
texture = ExtResource( 1 )
patch_margin_left = 32
patch_margin_right = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorTouchArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorTouchArea"]
position = Vector2( 0, -12 )
shape = SubResource( 3 )

[node name="Screw" type="Sprite" parent="."]
texture = ExtResource( 5 )
[connection signal="body_entered" from="FloorTouchArea" to="." method="_on_FloorTouchArea_body_entered"]
[connection signal="body_exited" from="FloorTouchArea" to="." method="_on_FloorTouchArea_body_exited"]
